# speak_when_done

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-12-suppress-during-meeting.md
docs/superpowers/specs/: 2026-03-12-suppress-during-meeting-design.md
speak_when_done/: __init__.py  cli.py  server.py  voices.py
tests/: __init__.py  test_cli.py  test_microphone_detection.py  test_speak.py
